fix: onboarding
