# public/swagger.json
@@ -655,64 +655,6 @@
 				}
 			}
 		},
-		"/api/v1/auth/onboarding": {
-			"post": {
-				"operationId": "Onboarding",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"data": {},
-										"message": {},
-										"statusCode": {
-											"type": "number",
-											"format": "double"
-										},
-										"status": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"data",
-										"message",
-										"statusCode",
-										"status"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Auth"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"multipart/form-data": {
-							"schema": {
-								"type": "object",
-								"properties": {
-									"file": {
-										"type": "string",
-										"format": "binary"
-									}
-								},
-								"required": [
-									"file"
-								]
-							}
-						}
-					}
-				}
-			}
-		},
 		"/api/v1/assessment/{category}": {
 			"get": {
 				"operationId": "GetAssessment",
